final html commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>content</h1>
-    <p>Hi</p>
-    <h3>end</h3>
+    <h1>Context</h1>
+    <h3>Thanks for using context</h3>
+    <h4>to get started open the next commit</h4>
 </body>
 </html>
