the final commit

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Context</h1>
-    <h3>Thanks for using context</h3>
+  </head>
+  <body>
+    <h1 id="example">Context</h1>
+    <h3>Example</h3>
     <h4>to get started open the next commit</h4>
-</body>
+    <button id="btnT">Test</button>
+    <button id="btnU">unTest</button>
+  </body>
+  <script src="app.js"></script>
 </html>
